--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <!-- Bnv 제목 -->
     <string name="bnv_menu_1">홈</string>
     <string name="bnv_menu_2">인벤토리</string>
-    <string name="bnv_menu_3">일정 추가</string>
+    <string name="bnv_menu_3">콕콕 찌르기</string>
     <string name="bnv_menu_4">마이페이지</string>
 </resources>
