Refactor: 일정 화면 버튼 네이밍 변경 및 widtbutton 스타일 변경
- 버튼의 네이밍을 보다 직관적으로 변경
- widtbutton의 스타일에서 버튼에 기본적으로 적용된 padding을 제거하고, 직접 지정한 padding이 적용되도록 설정함

--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -217,4 +217,6 @@
     <string name="popup_disable">비활성화</string>
     <!-- 버튼 -->
     <string name="button_create">등록하기</string>
+    <string name="button_delete">삭제하기</string>
+    <string name="button_edit">수정하기</string>
 </resources>
