--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -219,4 +219,6 @@
     <string name="button_create">등록하기</string>
     <string name="button_delete">삭제하기</string>
     <string name="button_edit">수정하기</string>
+    <!-- 토스트 메시지 -->
+    <string name="toast_todo_not_add">더이상 할 일을 추가할 수 없어요!</string>
 </resources>
