--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="signup_info_1">환영해요!</string>
     <string name="signup_info_2">어떻게 불러 드릴까요?</string>
     <string name="signup_nickname">사용하실 닉네임을 입력해 주세요</string>
-    <string name="signup_nickname_alert">10자 미만으로 입력해 주세요!</string>
+    <string name="signup_nickname_alert">6자 이하로 입력해 주세요!</string>
     <string name="signup_nickname_alert_confirm">정말 멋진 이름이에요!</string>
     <string name="signup_info_3">님,</string>
     <string name="signup_info_4">본격적으로 회원가입을 위한\n이메일을 입력해 주세요</string>
