--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -160,7 +160,7 @@
     <string name="tutorial_info_1">Oops는 어떤 방법으로</string>
     <string name="tutorial_info_2">님의 소지품을</string>
     <string name="tutorial_info_3">챙길 수 있을까요?</string>
-    <string name="tutorial_info_4">무엇을 위한 소품인지\n태그를 선택해 주세요</string>
+    <string name="tutorial_info_4">무엇을 위한 소지품인지\n태그를 선택해 주세요</string>
     <string name="tutorial_info_5">나중엔 내 마음대로 추가할 수 있어요</string>
     <string name="tutorial_travel">여행</string>
     <string name="tutorial_daily">일상</string>
