--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="btn_overlap">중복 확인</string>
     <string name="btn_wonder">궁금해요! 알려 주세요</string>
     <string name="btn_start">바로 시작할게요</string>
+    <string name="btn_check_end">다 체크했어요</string>
     <!-- 로그인 -->
     <string name="login_email">ID(E-mail)</string>
     <string name="login_email_alert">입력된 이메일이 올바르지 않아요</string>
@@ -162,6 +163,8 @@
     <string name="tutorial_info_3">챙길 수 있을까요?</string>
     <string name="tutorial_info_4">무엇을 위한 소지품인지\n태그를 선택해 주세요</string>
     <string name="tutorial_info_5">나중엔 내 마음대로 추가할 수 있어요</string>
+    <string name="tutorial_info_6">그다음! 본격적으로\n소지품을 챙겨 볼까요?</string>
+    <string name="tutorial_info_7">이중에 없는 건 추후에 추가될 예정이에요\n3개 이상 선택해 주세요</string>
     <string name="tutorial_travel">여행</string>
     <string name="tutorial_daily">일상</string>
     <string name="tutorial_study">수업</string>
