--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -211,6 +211,7 @@
     <string name="inventory_create">Create</string>
     <string name="create_inventory_name">이름</string>
     <string name="create_inventory_name_info">최대 5자까지 설정 가능해요</string>
+    <string name="create_inventory_name_alert">이미 있는 이름이에요</string>
     <string name="create_inventory_tag">관련 태그</string>
     <string name="create_inventory_tag_info">(최대 3개)</string>
     <string name="create_inventory_tag_info_1">태그는 왜 설정하나요?</string>
