--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -26,7 +26,8 @@
     <string name="signup_info_1">환영해요!</string>
     <string name="signup_info_2">어떻게 불러 드릴까요?</string>
     <string name="signup_nickname">사용하실 닉네임을 입력해 주세요</string>
-    <string name="signup_nickname_alert">6자 이하로 입력해 주세요!</string>
+    <string name="signup_nickname_alert_1">6자 이하로 입력해 주세요!</string>
+    <string name="signup_nickname_alert_2">이미 사용 중인 닉네임이에요</string>
     <string name="signup_nickname_alert_confirm">정말 멋진 이름이에요!</string>
     <string name="signup_info_3">님,</string>
     <string name="signup_info_4">본격적으로 회원가입을 위한\n이메일을 입력해 주세요</string>
@@ -274,6 +275,7 @@
     <!-- 토스트 메시지 -->
     <string name="toast_todo_not_add">더이상 할 일을 추가할 수 없어요!</string>
     <string name="toast_todo_not_delete">하나 이상의 할일을 추가해야 해요!</string>
+    <string name="toast_login_naver_failure">로그인이 취소되었습니다</string>
     <!-- 소지품 이름 -->
     <string name="stuff_computer">노트북</string>
     <string name="stuff_diary">다이어리</string>
