--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -12,6 +12,13 @@
     <string name="btn_start">바로 시작할게요</string>
     <string name="btn_check_end">다 체크했어요</string>
     <string name="btn_welcome">Oops 시작하기</string>
+    <string name="btn_create">등록하기</string>
+    <string name="btn_delete">삭제하기</string>
+    <string name="btn_edit">수정하기</string>
+    <string name="btn_stuff_add">소지품 추가하기</string>
+    <string name="btn_edit_complete">수정 완료</string>
+    <string name="btn_stuff_edit">소지품 수정</string>
+    <string name="btn_complete">완료</string>
     <!-- 로그인 -->
     <string name="login_email">ID(E-mail)</string>
     <string name="login_email_alert">입력된 이메일이 올바르지 않아요</string>
@@ -217,6 +224,9 @@
     <string name="create_inventory_tag_info">(최대 3개)</string>
     <string name="create_inventory_tag_info_1">태그는 왜 설정하나요?</string>
     <string name="create_inventory_tag_info_2">태그를 설정하시면 오늘 할 일을 작성하셨을 때\n더욱 더 꼼꼼하게 소지품을 챙길 수 있도록 추천해 드릴 수 있어요</string>
+    <string name="stuff_add_search_info">찾으시는 소지품 이름을 알려 주세요</string>
+    <string name="stuff_add_info_1">아직 소지품이 없어요</string>
+    <string name="stuff_add_info_2">말씀해 주신 소지품은 Oops에서\n추후에 추가할 수 있도록 할게요</string>
     <!-- 콕콕 찌르기 -->
     <string name="sting_sub">친구야! 소지품 잘 챙겼어?</string>
     <string name="sting_friends">친구 목록</string>
@@ -265,17 +275,11 @@
     <string name="popup_inventory_delete_info">정말 삭제하시겠어요?\n삭제된 인벤토리는 복구되지 않아요</string>
     <string name="popup_inventory_delete_agree">인벤토리 삭제 완료</string>
     <string name="popup_inventory_delete_agree_info">삭제가 완료되었어요</string>
-    <!-- 버튼 -->
-    <string name="button_create">등록하기</string>
-    <string name="button_delete">삭제하기</string>
-    <string name="button_edit">수정하기</string>
-    <string name="button_stuff_add">소지품 추가하기</string>
-    <string name="button_edit_complete">수정 완료</string>
-    <string name="button_stuff_edit">소지품 수정</string>
     <!-- 토스트 메시지 -->
     <string name="toast_todo_not_add">더이상 할 일을 추가할 수 없어요!</string>
     <string name="toast_todo_not_delete">하나 이상의 할일을 추가해야 해요!</string>
     <string name="toast_login_naver_failure">로그인이 취소되었습니다</string>
+    <string name="toast_server_error">요청을 처리할 수 없습니다</string>
     <!-- 소지품 이름 -->
     <string name="stuff_computer">노트북</string>
     <string name="stuff_diary">다이어리</string>
