--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="signup_nickname">사용하실 닉네임을 입력해 주세요</string>
     <string name="signup_nickname_alert_1">6자 이하로 입력해 주세요!</string>
     <string name="signup_nickname_alert_2">이미 사용 중인 닉네임이에요</string>
+    <string name="signup_nickname_alert_3">닉네임은 한글, 영문 대소문자만 입력할 수 있어요</string>
     <string name="signup_nickname_alert_confirm">정말 멋진 이름이에요!</string>
     <string name="signup_info_3">님,</string>
     <string name="signup_info_4">본격적으로 회원가입을 위한\n이메일을 입력해 주세요</string>
