--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -24,6 +24,11 @@
     <string name="btn_withdrawal_next">탈퇴할게요</string>
     <string name="btn_scroll_down">아래로 스크롤하기</string>
     <string name="btn_check_read">확인했습니다</string>
+    <string name="btn_find">조회하기</string>
+    <string name="btn_pw_reset">비밀번호 재설정</string>
+    <string name="btn_go_login">로그인하러 가기</string>
+    <string name="btn_code_transmit">코드전송</string>
+    <string name="btn_code_certify">인증하기</string>
 
     <!-- 라디오 버튼 -->
     <string name="radio_btn_withdrawal_1">앱 사용이 불편해요</string>
@@ -42,6 +47,19 @@
     <string name="login_signup">회원가입</string>
     <string name="login_info">더욱 쉽게 시작하세요</string>
     <string name="login_recent">가장 최근에 로그인했어요</string>
+
+    <!-- ID/PW 찾기 -->
+    <string name="find_id">ID 찾기</string>
+    <string name="find_id_email">이메일 입력</string>
+    <string name="find_id_email_info_1">등록된 이메일이 없습니다</string>
+    <string name="find_id_email_info_2">(SNS이름)으로 가입된 이메일입니다</string>
+    <string name="find_id_email_info_3">등록된 이메일입니다</string>
+    <string name="find_pw_code">인증코드 입력</string>
+    <string name="find_pw">PW 찾기</string>
+    <string name="find_pw_new">새로운 비밀번호 입력</string>
+    <string name="find_pw_new_info_1">기존 비밀번호와 일치해 사용할 수 없어요</string>
+    <string name="find_pw_new_info_2">비밀번호 설정</string>
+    <string name="find_pw_new_info_3">비밀번호는 영문, 숫자, 특수문자를 포함해 8자 이상이어야 해요\n영문 대문자, 소문자 둘 중 하나만 입력해 주셔도 돼요</string>
 
     <!-- 회원가입 -->
     <string name="signup_info_1">환영해요!</string>
