--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -381,6 +381,8 @@
     <string name="popup_push_alert_disable">알림 비활성화</string>
     <string name="popup_push_alert_disable_info">앗! 잠깐! 알림을 끄면 꼼꼼하게 챙겨 드릴 수가 없어요\n그래도 알림을 그만 보낼까요?</string>
     <string name="popup_disable">비활성화</string>
+    <string name="popup_todo_create">일정 추가 완료</string>
+    <string name="popup_todo_create_info">말씀하신 일정을 잘 기록했어요!\n잘 기억해 놓을게요</string>
     <string name="popup_inventory_delete">인벤토리 삭제</string>
     <string name="popup_inventory_delete_info">정말 삭제하시겠어요?\n삭제된 인벤토리는 복구되지 않아요</string>
     <string name="popup_inventory_delete_agree">인벤토리 삭제 완료</string>
