--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -383,6 +383,8 @@
     <string name="popup_disable">비활성화</string>
     <string name="popup_todo_create">일정 추가 완료</string>
     <string name="popup_todo_create_info">말씀하신 일정을 잘 기록했어요!\n잘 기억해 놓을게요</string>
+    <string name="popup_todo_modify">일정 수정 완료</string>
+    <string name="popup_todo_modify_info">수정이 성공적으로 완료되었어요!\n홈 화면을 통해 확인해 주세요</string>
     <string name="popup_inventory_delete">인벤토리 삭제</string>
     <string name="popup_inventory_delete_info">정말 삭제하시겠어요?\n삭제된 인벤토리는 복구되지 않아요</string>
     <string name="popup_inventory_delete_agree">인벤토리 삭제 완료</string>
