--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -372,6 +372,8 @@
     <string name="popup_push_alert_info">푸시 알림 미전송 시\n꼼꼼하게 챙겨드리기 어려워요!\n알림을 받으시겠어요?</string>
     <string name="popup_disagree">동의 안함</string>
     <string name="popup_agree">동의</string>
+    <string name="popup_yes">예</string>
+    <string name="popup_no">아니오</string>
     <string name="popup_push_alert_disagree">앱 푸시 알림 미동의</string>
     <string name="popup_push_alert_disagree_info">푸시 알림에 미동의하셨습니다</string>
     <string name="popup_confirm">확인</string>
@@ -385,6 +387,10 @@
     <string name="popup_todo_create_info">말씀하신 일정을 잘 기록했어요!\n잘 기억해 놓을게요</string>
     <string name="popup_todo_modify">일정 수정 완료</string>
     <string name="popup_todo_modify_info">수정이 성공적으로 완료되었어요!\n홈 화면을 통해 확인해 주세요</string>
+    <string name="popup_todo_delete">일정을 삭제할까요?</string>
+    <string name="popup_todo_delete_info">일정을 삭제하시면 추천된 소지품도\n함께 삭제돼요</string>
+    <string name="popup_todo_delete_agree">일정 삭제 완료</string>
+    <string name="popup_todo_delete_agree_info">일정 삭제가 성공적으로 완료되었어요!\n언제든 할 일을 추가해 주세요</string>
     <string name="popup_inventory_delete">인벤토리 삭제</string>
     <string name="popup_inventory_delete_info">정말 삭제하시겠어요?\n삭제된 인벤토리는 복구되지 않아요</string>
     <string name="popup_inventory_delete_agree">인벤토리 삭제 완료</string>
