--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -330,11 +330,14 @@
     <string name="friends_nickname">친구의 닉네임을 입력해 주세요</string>
     <string name="friends_new">친구 신청 현황</string>
     <string name="friends_old">친구 목록</string>
+    <string name="friend_search_result">검색 결과</string>
     <string name="friends_add">친구 신청</string>
     <string name="friends_wait">대기중</string>
     <string name="friends_confirm">수락</string>
     <string name="friends_refuse">거절</string>
     <string name="friend_delete">친구 끊기</string>
+    <string name="friend_no_search_result">검색 결과가 없어요</string>
+    <string name="friend_no_search_result_info">다른 멋진 이름으로 새로운 친구를\n찾아보는 게 어떨까요?</string>
 
     <!-- 마이페이지 -->
     <string name="myPage_default">일반</string>
