Feat: 친구 신청 거절&친구 끊기 API 연결

--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -402,6 +402,8 @@
     <string name="popup_inventory_modify_info">수정이 완료되었어요\n수정된 소지품은 인벤토리 화면에서\n확인하실 수 있어요</string>
     <string name="popup_friends_accept">친구 신청 수락</string>
     <string name="popup_friends_accept_info">친구가 되었어요\n오늘부터 우리는 짱친!</string>
+    <string name="popup_friends_refuse">친구 신청 거절</string>
+    <string name="popup_friends_refuse_info">친구 신청을 거절했어요</string>
 
     <!-- 토스트 메시지 -->
     <string name="toast_todo_not_add">더이상 할 일을 추가할 수 없어요!</string>
