--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -377,6 +377,8 @@
     <string name="popup_cancel">취소</string>
     <string name="popup_use">사용</string>
     <string name="popup_delete">삭제</string>
+    <string name="popup_modify">수정</string>
+    <string name="popup_not_modify">수정 안함</string>
     <string name="popup_push_alert">푸시 알림 미동의</string>
     <string name="popup_push_alert_info">푸시 알림 미전송 시\n꼼꼼하게 챙겨드리기 어려워요!\n알림을 받으시겠어요?</string>
     <string name="popup_disagree">동의 안함</string>
@@ -410,6 +412,11 @@
     <string name="popup_friends_accept_info">친구가 되었어요\n오늘부터 우리는 짱친!</string>
     <string name="popup_friends_refuse">친구 신청 거절</string>
     <string name="popup_friends_refuse_info">친구 신청을 거절했어요</string>
+    <string name="popup_home_inventory">기존 인벤토리 수정</string>
+    <string name="popup_home_inventory_info">기존 인벤토리도 함께 수정할까요?</string>
+    <string name="popup_home_inventory_agree">소지품 추가 완료</string>
+    <string name="popup_home_inventory_agree_info_1">인벤토리 내 소지품을 수정했어요</string>
+    <string name="popup_home_inventory_agree_info_2">소지품 추가가 완료되었어요\n기존 인벤토리는 유지할게요</string>
 
     <!-- 토스트 메시지 -->
     <string name="toast_todo_not_add">더이상 할 일을 추가할 수 없어요!</string>
