--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="find_id">ID 찾기</string>
     <string name="find_id_email">이메일 입력</string>
     <string name="find_id_email_info_1">등록된 이메일이 없습니다</string>
-    <string name="find_id_email_info_2">(SNS이름)으로 가입된 이메일입니다</string>
+    <string name="find_id_email_info_2">으로 가입된 이메일입니다</string>
     <string name="find_id_email_info_3">등록된 이메일입니다</string>
     <string name="find_pw_code">인증코드 입력</string>
     <string name="find_pw">PW 찾기</string>
