--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -384,6 +384,8 @@
     <string name="popup_delete">삭제</string>
     <string name="popup_modify">수정</string>
     <string name="popup_not_modify">수정 안함</string>
+    <string name="popup_signup_email_overlap">기존 회원이셨군요!</string>
+    <string name="popup_signup_email_overlap_info">이미 Oops에 가입한 회원이시네요\n로그인 페이지로 돌아가 SNS로 로그인 해 주세요</string>
     <string name="popup_push_alert">푸시 알림 미동의</string>
     <string name="popup_push_alert_info">푸시 알림 미전송 시\n꼼꼼하게 챙겨드리기 어려워요!\n알림을 받으시겠어요?</string>
     <string name="popup_disagree">동의 안함</string>
