--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -442,6 +442,7 @@
     <!-- 스낵바 메시지 -->
     <string name="snackbar_read_terms">개인정보 처리 방침을 클릭하여 읽어 주세요!</string>
     <string name="snackbar_sting_10">아야! 더 이상 찌를 수 없어요</string>
+    <string name="snackbar_todo_change">오늘 할 일 작성을 완료 시 추가할 수 있어요</string>
 
     <!-- 소지품 이름 -->
     <string name="stuff_computer">노트북</string>
