Fix: 인벤토리가 없는 경우, 홈 화면에서 소지품을 수정할 때 팝업 다르기 띄우기 #32
- 이슈: 사용자가 일정 생성 후 소지품이 추천된 상태에서, 모든 인벤토리를 삭제했다면 소지품 수정 화면에서 인벤토리 이름이 없는 문제
- 해결: '사용 중인 인벤토리가 없습니다' 문구 띄우기
- 이슈: 현재 인벤토리가 없는 경우, 기존과 같이 소지품을 수정할 때 인벤토리에도 변경사항을 적용할까요?라는 팝업 띄우기 불가능
- 해결: 소지품을 수정할까요? 예/아니오 팝업 띄우고, 소지품을 수정하겠다고 한다면 다시 소지품 수정 완료 팝업 띄우기

--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -421,6 +421,9 @@
     <string name="popup_friends_accept_info">친구가 되었어요\n오늘부터 우리는 짱친!</string>
     <string name="popup_friends_refuse">친구 신청 거절</string>
     <string name="popup_friends_refuse_info">친구 신청을 거절했어요</string>
+    <string name="popup_home_inventory_no">소지품 수정</string>
+    <string name="popup_home_inventory_no_info_1">소지품을 수정할까요?</string>
+    <string name="popup_home_inventory_no_info_2">인벤토리가 존재하지 않아\n홈 화면에만 추가돼요</string>
     <string name="popup_home_inventory">기존 인벤토리 수정</string>
     <string name="popup_home_inventory_info">기존 인벤토리도 함께 수정할까요?</string>
     <string name="popup_home_inventory_agree">소지품 추가 완료</string>
