--- a/Oops-Android/app/src/main/res/values/strings.xml
+++ b/Oops-Android/app/src/main/res/values/strings.xml
@@ -357,6 +357,9 @@
     <string name="myPage_tag">받은 태그</string>
     <string name="myPage_tag_lock">업데이트 준비 중입니다</string>
     <string name="myPage_logout">로그아웃</string>
+    <string name="myPage_profile_gallery">갤러리에서 설정</string>
+    <string name="myPage_profile_camera">프로필 사진 촬영</string>
+    <string name="myPage_profile_delete">프로필 사진 삭제</string>
     <string name="myPage_alert">푸시 알림</string>
     <string name="myPage_nickname">닉네임</string>
     <string name="myPage_email">아이디(이메일)</string>
